_archive_deploys/retrieve-listviews-2026-05-08/retrieved/unpackaged/objects/Property_Location__c.object
<CustomObject>
    <fields>
        <fullName>AM_Flag_RE_to_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Address Management Flag for RE to Review</inlineHelpText>
        <label>AM - Flag RE to Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AM_Review_Status__c</fullName>
        <formula>IF(
    NOT(ISBLANK(RE_Review_Notes_AM__c)),
    &quot;RE Reviewed&quot;,
    IF(
        AM_Flag_RE_to_Review__c,
        &quot;Pending RE Review&quot;,
        IF(
            NOT(ISBLANK(TEXT(AM_Status__c))),
            TEXT(AM_Status__c),
            &quot;&quot;
        )
    )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AM Review Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AM_Status__c</fullName>
        <label>AM Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Added to Vetro</fullName>
                </value>
                <value>
                    <fullName>No Change</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AM_Suite_Numbers__c</fullName>
        <label>AM - Suite Numbers</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVR_Project_ID__c</fullName>
        <label>AVR Project ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access_Agreement_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Access Agreement Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active_Unit_Count__c</fullName>
        <label>Active Unit Count</label>
        <summaryFilterItems>
            <field>Property_Unit__c.Activated__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </summaryFilterItems>
        <summaryForeignKey>Property_Unit__c.Property_Location__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Additional_Units_found__c</fullName>
        <label>Additional Units found</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Address_Review_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Address Review Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address_Type__c</fullName>
        <description>Vetro properties.addtype: Business (BUS) for commercial addresses keyed by Business Base Address; MDU for multi-dwelling complexes keyed by Agreement Name; SFU for agreement-grouped single-family units (RV resorts, HOAs, mobile-home parks) keyed by Agreement Name.</description>
        <label>Address Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>MDU</fullName>
                </value>
                <value>
                    <fullName>SFU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agreement_Name__c</fullName>
        <description>Cross-system agreement identifier from Vetro properties.agreename. Used to group MDU and SFU Property_Locations under a single pursuit (e.g. &quot;Mesa_MDU_Mesa Regal RV Resort&quot;). For business addresses, this field is generally blank since each address is its own pursuit.</description>
        <label>Agreement Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>All_Units_Active_Icon__c</fullName>
        <formula>IF(
  Property_Unit_Count__c = Active_Unit_Count__c,
  &quot;✅ All Active&quot;,
  &quot;&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>All Units Active</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assignment_Reference__c</fullName>
        <label>Assignment Reference</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Available_for_Sales_Count__c</fullName>
        <label>Available for Sales Unit Count</label>
        <summaryFilterItems>
            <field>Property_Unit__c.ValidForFF__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Property_Unit__c.Activated__c</field>
            <operation>equals</operation>
            <value>No</value>
        </summaryFilterItems>
        <summaryForeignKey>Property_Unit__c.Property_Location__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Available_for_Sales__c</fullName>
        <label>Available for Sales</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Build_Effort__c</fullName>
        <description>Estimated build effort level for the property</description>
        <label>Build Effort</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Easy</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Hard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Building_Floor_Type__c</fullName>
        <label>Building Floor Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Multi Floor Establishment</fullName>
                </value>
                <value>
                    <fullName>Single-floor Establishment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bulk_Deal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bulk Deal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Base_Address__c</fullName>
        <externalId>true</externalId>
        <label>Business Base Address</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Business_Building_Id__c</fullName>
        <label>Business Building Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Categorize_as_MTU__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked when address is tied to multiple units or in same strip mall/center etc. Only Checked when some addresses are missing per Review</inlineHelpText>
        <label>Categorize as MTU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Circuit_ID__c</fullName>
        <label>Circuit ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deactive_Unit_Count__c</fullName>
        <label>Deactive Unit Count</label>
        <summaryFilterItems>
            <field>Property_Unit__c.Address_Deactivated__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </summaryFilterItems>
        <summaryForeignKey>Property_Unit__c.Property_Location__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Existing_Fiber_Provider__c</fullName>
        <label>Existing Fiber Provider</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FDH_Activated_Date__c</fullName>
        <label>FDH Activated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FDH_Name__c</fullName>
        <label>FDH Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FF_Sales_Assigned_Date__c</fullName>
        <description>Date property was assigned to FiberFirst sales</description>
        <label>FF Sales Assigned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FF_Sales_Project__c</fullName>
        <description>FiberFirst sales project assignment (e.g. SMB ROE)</description>
        <label>FF Sales Project</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GIS_API_Match__c</fullName>
        <label>GIS API Match</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GIS_Notes__c</fullName>
        <label>GIS Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GIS_Review_Date__c</fullName>
        <label>GIS Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GIS_Review_Quarter__c</fullName>
        <formula>TEXT(YEAR(GIS_Review_Date__c)) &amp;
&quot;Q&quot; &amp;
CASE(
  CEILING(MONTH(GIS_Review_Date__c) / 3),
  1, &quot;1&quot;,
  2, &quot;2&quot;,
  3, &quot;3&quot;,
  4, &quot;4&quot;,
  &quot;?&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GIS Review Quarter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GIS_Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GIS Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Property_Locations3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Import_DateTime__c</fullName>
        <label>Import DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Import_Delete_Note__c</fullName>
        <label>Import Delete Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Import_Delete_Property__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Import Delete Property</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MTU_Address_Reviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>For Address Management Team</inlineHelpText>
        <label>MTU Address Reviewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MTU_Group_Name__c</fullName>
        <inlineHelpText>Format: ALL CAPS
Lowest Address # _STREET NAME_ CITY_MTU
Example: 115_ACACIA_SOLANA BEACH_MTU</inlineHelpText>
        <label>MTU Group Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MTU_Notes__c</fullName>
        <label>MTU Notes</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Management_Company__c</fullName>
        <label>Management Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Property_Contact__c</fullName>
        <label>Owner / Property Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parcel__c</fullName>
        <label>Parcel #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Potential_Issues__c</fullName>
        <label>Potential Issues</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <formula>IF(
  Hold__c = TRUE,
  &quot;Hold&quot;,

  IF(
    Active_Unit_Count__c = Property_Unit_Count__c,
    &quot;All Active&quot;,

    IF(
      AND(Property_Unit_Count__c = 1, Active_Unit_Count__c = 0),
      &quot;Category 3&quot;,

      IF(
        AND(
          Property_Unit_Count__c &gt; 1,
          OR(
            Active_Unit_Count__c &gt; 0,
            Deactive_Unit_Count__c &gt; 0
          )
        ),
        &quot;Category 1&quot;,

        IF(
          AND(Property_Unit_Count__c &gt; 1, Active_Unit_Count__c = 0),
          &quot;Category 2&quot;,
          &quot;&quot;
        )
      )
    )
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Customer_Bucket__c</fullName>
        <formula>IF(
  AND(NOT(ISBLANK(Active_Unit_Count__c)), Active_Unit_Count__c = Property_Unit_Count__c),
  &quot;All units have customer&quot;,
  IF(
    Active_Unit_Count__c &gt; 0,
    &quot;Units with active customer&quot;,
    &quot;Units with no active customer&quot;
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property Customer Bucket</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Location_Name__c</fullName>
        <label>Property Location Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Status__c</fullName>
        <label>Property Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property_Type__c</fullName>
        <description>Business Park –  
Cluster of office buildings, not intended for retail businesses

Industrial –  
Warehouses, workshops, distribution centers, or manufacturing facilities

Medical –  
Hospital campuses, clinics, or office complexes dedicated to healthcare

Mixed Use –  
Developments combining residential, office, and/or retail spaces

Self Storage –  
Facilities with multiple rentable storage units for personal or business use

Shopping Plaza –  
Enclosed malls or large open-air centers with multiple retail/service tenants

Strip Mall –  
Linear retail complexes with side-by-side storefronts and shared parking

Other –  
Does not fit standard complex types</description>
        <inlineHelpText>•	Business Park: Office use only  
•	Government / Municipal: City/fire/public buildings  
•	Hotel: Lodging  
•	Industrial: Warehouses, workshops  
•	Medical: Clinics, hospitals  
•	Mixed Use: Residential + retail/office  
•	Other: Doesn’t fit other types  
•	Restaurant: Food service buildings  
•	Self Storage: Rentable storage units  
•	Shopping Plaza: Enclosed/multi-building retail  
•	Strip Mall: Linear storefronts</inlineHelpText>
        <label>Property Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business Park</fullName>
                </value>
                <value>
                    <fullName>Government / Municipal</fullName>
                </value>
                <value>
                    <fullName>Hotel</fullName>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Mixed Use</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Restaurant</fullName>
                </value>
                <value>
                    <fullName>Self Storage</fullName>
                </value>
                <value>
                    <fullName>Shopping Plaza</fullName>
                </value>
                <value>
                    <fullName>Strip Mall</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property_Unit_Count__c</fullName>
        <label>Property Unit Count</label>
        <summaryForeignKey>Property_Unit__c.Property_Location__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RE_Notes__c</fullName>
        <label>RE Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RE_Review_Date_AM__c</fullName>
        <label>RE Review Date - AM</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RE_Review_Notes_AM__c</fullName>
        <label>RE Review Notes - AM</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RE_Reviewed__c</fullName>
        <formula>OR(
  number_of_buildings__c != 0,
  number_of_parcels__c != 0,
  number_of_tenants__c != 0,
  number_of_owners__c != 0,
  NOT(ISBLANK(RE_Notes__c))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RE Reviewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RE_Reviewer_AM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RE Reviewer - AM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Property_Locations2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ROE_Date_AC__c</fullName>
        <label>ROE Date AC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ROE_Date_FC__c</fullName>
        <label>ROE Date FC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ROE_Executed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ROE Executed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ROE_Status__c</fullName>
        <label>ROE Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Required</fullName>
                </value>
                <value>
                    <fullName>ROE Sent</fullName>
                </value>
                <value>
                    <fullName>ROE Signed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Record_ID_Property__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record ID Property</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_MTU_Addresses__c</fullName>
        <label>Related MTU Addresses</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SMB_RE_In_Scope__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SMB RE In Scope</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Assigned__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Assigned</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Property_Locations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Estimate_Baseline__c</fullName>
        <label>Sales Estimate Baseline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Notes__c</fullName>
        <description>Notes from FF Sales team</description>
        <label>Sales Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Serving_Area__c</fullName>
        <label>Serving Area</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Walk_AC__c</fullName>
        <label>Site_Walk_AC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Site_Walk_FC__c</fullName>
        <label>Site Walk FC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>TX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Property__c</fullName>
        <label>Type of Property</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>HOA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit_Count_Engaged__c</fullName>
        <label>Unit Count Engaged</label>
        <summaryFilterItems>
            <field>Property_Unit__c.Sales_Status__c</field>
            <operation>equals</operation>
            <value>Engaged</value>
        </summaryFilterItems>
        <summaryForeignKey>Property_Unit__c.Property_Location__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Unit_Count_Pending_Signature__c</fullName>
        <label>Unit Count Pending Signature</label>
        <summaryFilterItems>
            <field>Property_Unit__c.Sales_Status__c</field>
            <operation>equals</operation>
            <value>Pending Signature</value>
        </summaryFilterItems>
        <summaryForeignKey>Property_Unit__c.Property_Location__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Unit_Count_Proposal_Sent__c</fullName>
        <label>Unit Count Proposal Sent</label>
        <summaryFilterItems>
            <field>Property_Unit__c.Sales_Status__c</field>
            <operation>equals</operation>
            <value>Proposal Sent</value>
        </summaryFilterItems>
        <summaryForeignKey>Property_Unit__c.Property_Location__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Unit_Count_Research_Required__c</fullName>
        <label>Unit Count Research Required</label>
        <summaryFilterItems>
            <field>Property_Unit__c.Sales_Status__c</field>
            <operation>equals</operation>
            <value>Research Required</value>
        </summaryFilterItems>
        <summaryForeignKey>Property_Unit__c.Property_Location__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Units_in_Progress__c</fullName>
        <formula>IF(
  OR(
    Unit_Count_Research_Required__c &gt; 0,
    Unit_Count_Engaged__c &gt; 0,
    Unit_Count_Proposal_Sent__c &gt; 0,
    Unit_Count_Pending_Signature__c &gt; 0
  ),
  &quot;Unit(s) In Progress&quot;,
  &quot;&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Units in Progress</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RE Assigned</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Property_Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Year_Month_FDH_Activation__c</fullName>
        <formula>TEXT(YEAR(FDH_Activated_Date__c)) &amp; &quot;-&quot; &amp; 
CASE(
  MONTH(FDH_Activated_Date__c),
  1, &quot;01&quot;,
  2, &quot;02&quot;,
  3, &quot;03&quot;,
  4, &quot;04&quot;,
  5, &quot;05&quot;,
  6, &quot;06&quot;,
  7, &quot;07&quot;,
  8, &quot;08&quot;,
  9, &quot;09&quot;,
 10, &quot;10&quot;,
 11, &quot;11&quot;,
 12, &quot;12&quot;,
  &quot;00&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year - Month FDH Activation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>number_of_buildings__c</fullName>
        <label># of buildings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>number_of_owners__c</fullName>
        <label># of owners</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>number_of_parcels__c</fullName>
        <label># of parcels</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>number_of_roes__c</fullName>
        <label># of ROEs</label>
        <summaryFilterItems>
            <field>Property_Unit__c.ROE__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Property_Unit__c.Property_Location__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>number_of_tenants__c</fullName>
        <label># of tenants</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Property Location</label>
    <listViews>
        <fullName>AZ_Category_2</fullName>
        <columns>NAME</columns>
        <columns>Address_Type__c</columns>
        <columns>Priority__c</columns>
        <columns>State__c</columns>
        <columns>Property_Unit_Count__c</columns>
        <columns>Active_Unit_Count__c</columns>
        <columns>Type_of_Property__c</columns>
        <columns>Building_Floor_Type__c</columns>
        <columns>Property_Type__c</columns>
        <columns>ROE_Executed__c</columns>
        <columns>Categorize_as_MTU__c</columns>
        <columns>Related_MTU_Addresses__c</columns>
        <columns>RE_Notes__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Priority__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Import_Delete_Property__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Review AZ – Category 2</label>
    </listViews>
    <listViews>
        <fullName>Address_Review_Required</fullName>
        <columns>NAME</columns>
        <columns>Address_Type__c</columns>
        <columns>Priority__c</columns>
        <columns>State__c</columns>
        <columns>Property_Unit_Count__c</columns>
        <columns>Active_Unit_Count__c</columns>
        <columns>Address_Review_Required__c</columns>
        <columns>Categorize_as_MTU__c</columns>
        <columns>User__c</columns>
        <columns>MTU_Group_Name__c</columns>
        <columns>Related_MTU_Addresses__c</columns>
        <columns>MTU_Notes__c</columns>
        <columns>GIS_Notes__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Categorize_as_MTU__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>MTU_Notes__c</field>
            <operation>contains</operation>
        </filters>
        <filters>
            <field>MTU_Notes__c</field>
            <operation>contains</operation>
        </filters>
        <filters>
            <field>MTU_Notes__c</field>
            <operation>contains</operation>
        </filters>
        <filters>
            <field>MTU_Notes__c</field>
            <operation>contains</operation>
        </filters>
        <filters>
            <field>Related_MTU_Addresses__c</field>
            <operation>contains</operation>
        </filters>
        <filters>
            <field>Related_MTU_Addresses__c</field>
            <operation>contains</operation>
        </filters>
        <filters>
            <field>Import_Delete_Property__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Address Review Required - AM</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Address_Type__c</columns>
        <columns>Priority__c</columns>
        <columns>State__c</columns>
        <columns>Property_Unit_Count__c</columns>
        <columns>Active_Unit_Count__c</columns>
        <columns>Building_Floor_Type__c</columns>
        <columns>Sales_Assigned__c</columns>
        <columns>Units_in_Progress__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Import_Delete_Property__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Assign_Sales</fullName>
        <columns>NAME</columns>
        <columns>Address_Type__c</columns>
        <columns>Priority__c</columns>
        <columns>State__c</columns>
        <columns>City__c</columns>
        <columns>Property_Unit_Count__c</columns>
        <columns>Active_Unit_Count__c</columns>
        <columns>Sales_Assigned__c</columns>
        <columns>Assignment_Reference__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Assigned__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Import_Delete_Property__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Assign Sales</label>
    </listViews>
    <listViews>
        <fullName>CA_Cat_2</fullName>
        <columns>NAME</columns>
        <columns>Address_Type__c</columns>
        <columns>Priority__c</columns>
        <columns>State__c</columns>
        <columns>Property_Unit_Count__c</columns>
        <columns>Active_Unit_Count__c</columns>
        <columns>Type_of_Property__c</columns>
        <columns>Building_Floor_Type__c</columns>
        <columns>Property_Type__c</columns>
        <columns>RE_Notes__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Priority__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Hold__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Import_Delete_Property__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Review CA – Category 2</label>
    </listViews>
    <listViews>
        <fullName>CA_Not_on_Hold</fullName>
        <columns>NAME</columns>
        <columns>Address_Type__c</columns>
        <columns>Priority__c</columns>
        <columns>State__c</columns>
        <columns>Property_Unit_Count__c</columns>
        <columns>Active_Unit_Count__c</columns>
        <columns>Hold__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Hold__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>City__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>City__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Import_Delete_Property__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>CA Not on Hold - Carlsbad/Enc</label>
    </listViews>
    <listViews>
        <fullName>Category_1</fullName>
        <columns>NAME</columns>
        <columns>Address_Type__c</columns>
        <columns>Priority__c</columns>
        <columns>State__c</columns>
        <columns>City__c</columns>
        <columns>Property_Unit_Count__c</columns>
        <columns>Active_Unit_Count__c</columns>
        <columns>Sales_Assigned__c</columns>
        <columns>Units_in_Progress__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Priority__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Import_Delete_Property__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>General - Category 1</label>
    </listViews>
</CustomObject>